manteinance(transaction) cards added to entity
